--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -3,10 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/action_search"
-    android:orderInCategory="100"
+    android:orderInCategory="101"
     android:title="@string/action_search"
     android:icon="@drawable/baseline_search_24"
     app:actionViewClass="androidx.appcompat.widget.SearchView"
     app:showAsAction="always|collapseActionView"
     />
+    <item
+        android:id="@+id/opcion1"
+        android:title="Opcion 1" />
+    <item
+        android:id="@+id/opcion2"
+        android:title="Opcion 2" />
+    <item
+        android:id="@+id/opcion3"
+        android:title="Opcion 3" />
+    <item
+        android:id="@+id/opcion4"
+        android:title="Opcion 4" />
+
+
 </menu>
